--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   
+   <link rel="stylesheet" href="main.css" type="text/css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <meta charset="UTF-8">
@@ -256,6 +258,6 @@
     
   </footer>
   
-  
+  <script src="myscript"></script>
 </body>
 </html>
